# TG_3SIX_O

./: .gitignore  CMakeLists.txt  README.md  README_KrakowLiveMap.md  e --abbrev-ref HEAD  package-lock.json  sample.ics
docs/: MOBILE_FIRST.md  PROJECT_CODENAME.md  requirements.md
docs/design/: COLOR_SCHEME.md  LIGHT_MODE_THEMES.md
docs/plans/: nextjs-frontend-plan.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/demo/: page.tsx
frontend/app/(dashboard)/map/: page.tsx
frontend/components/cards/: ReportCard.tsx
frontend/components/forms/: ReportDelayForm.tsx
frontend/components/map/: LeafletMap.tsx
frontend/components/ui/: PointsDisplay.tsx  VoteButtons.tsx  theme-toggle.tsx
frontend/hooks/: useGeolocation.ts
frontend/lib/: api-client.ts  points.ts  sse-client.ts
frontend/types/: index.ts
prediction_delay/: chronos_delay.py  delay_output.py  forecasts.json  raw_forecasts.json  raw_forecasts.pkl
python_code/: krakow_bus_live.py  requirements.txt
python_code/krakow_bus_live/: app.py  data.py  map_helpers.py  utils.py
python_code/krakow_bus_live/assets/: legend.html
src/: TransitDNA.cpp  TransitDNA.hpp  dijkstra.cpp  dijkstra.hpp  main.cpp  server.cpp  server.hpp  store.cpp  store.hpp
x64/Debug/: TG_3sixO.exe.recipe  TG_3sixO.ilk
x64/Debug/TG_3sixO.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  TG_3sixO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
